WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198465
CachedMetadataTable::decode leaks empty tables
https://bugs.webkit.org/show_bug.cgi?id=198465
Summary
CachedMetadataTable::decode leaks empty tables
Tadeu Zagallo
Reported
2019-06-01 22:29:48 PDT
<
rdar://problem/51307673
>
Attachments
Patch
(3.46 KB, patch)
2019-06-01 22:36 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews211 for win-future
(13.99 MB, application/zip)
2019-06-02 03:04 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-06-01 22:36:01 PDT
Created
attachment 371137
[details]
Patch
EWS Watchlist
Comment 2
2019-06-02 03:04:30 PDT
Comment on
attachment 371137
[details]
Patch
Attachment 371137
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12353848
New failing tests: imported/blink/fast/canvas/canvas-clip-stack-persistence.html
EWS Watchlist
Comment 3
2019-06-02 03:04:32 PDT
Created
attachment 371141
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Yusuke Suzuki
Comment 4
2019-06-02 03:15:07 PDT
Comment on
attachment 371137
[details]
Patch r=me, nice catch.
WebKit Commit Bot
Comment 5
2019-06-02 05:25:21 PDT
Comment on
attachment 371137
[details]
Patch Clearing flags on attachment: 371137 Committed
r246021
: <
https://trac.webkit.org/changeset/246021
>
WebKit Commit Bot
Comment 6
2019-06-02 05:25:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug