CachedMetadataTable::decode leaks empty tables https://bugs.webkit.org/show_bug.cgi?id=198465 <rdar://problem/51307673>

Reviewed by Yusuke Suzuki.

CachedMetadataTable::decode creates the metadata and never calls finalize on it.
This leaks the underlying UnlinkedMetadataTable buffer when m_hasMetadata is false,
since the buffer would be freed in finalize instead of in the destructor.

* bytecode/UnlinkedMetadataTable.h:
(JSC::UnlinkedMetadataTable::empty):
* bytecode/UnlinkedMetadataTableInlines.h:
(JSC::UnlinkedMetadataTable::UnlinkedMetadataTable):
* runtime/CachedTypes.cpp:
(JSC::CachedMetadataTable::decode const):


Canonical link: https://commits.webkit.org/212487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246021 268f45cc-cd09-0410-ab3c-d52691b4dbfc